// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionList styles style params color brand 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_brand css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-color-brand"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-ougcl3-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-6cyybj-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color danger 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_danger css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-color-danger"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_danger QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_position_left css-4fg1h4-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_danger QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_checked QxRadioButton_position_left css-4fg1h4-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-zeg6rg-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_danger QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_disabled QxRadioButton_position_left css-h412s2-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_danger QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-h412s2-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-qk00se-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color info 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_info css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-color-info"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_info QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_position_left css-h9yc08-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_info QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_checked QxRadioButton_position_left css-h9yc08-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1hi6ldi-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_info QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_disabled QxRadioButton_position_left css-1aejot4-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_info QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1aejot4-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-h2rbzs-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color secondary 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_secondary css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-color-secondary"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_secondary QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_secondary QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_checked QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1f433sj-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_secondary QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_disabled QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_secondary QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-1t7fyyf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color success 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_success css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-color-success"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_success QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_position_left css-1qhb4l9-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_success QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_checked QxRadioButton_position_left css-1qhb4l9-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1j3sgci-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_success QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_disabled QxRadioButton_position_left css-72h97m-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_success QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-72h97m-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-w33nax-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color warning 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_warning css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-color-warning"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_warning QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_position_left css-r29kwg-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_warning QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_checked QxRadioButton_position_left css-r29kwg-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-18e0gak-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_warning QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_disabled QxRadioButton_position_left css-1nypywu-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_warning QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1nypywu-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-1i89la4-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params size large 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_large QxSelectionList_color_brand css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-size-large"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_large css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-5x071e-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_position_left css-gyjvtb-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-v82vrn-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_large css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-5x071e-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-gyjvtb-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-ougcl3-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-v82vrn-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_large css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-5x071e-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-tgu7rz-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-p79lri-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_large css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-5x071e-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-tgu7rz-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-6cyybj-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-p79lri-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params size medium 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_brand css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-size-medium"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-ougcl3-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-6cyybj-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params size small 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_small QxSelectionList_color_brand css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-size-small"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_small css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-15ulb7b-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_position_left css-pxwhlw-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wpimqb-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_small css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-15ulb7b-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-pxwhlw-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-ougcl3-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wpimqb-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_small css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-15ulb7b-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-fd9n9w-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-jzg4li-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_small css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-15ulb7b-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-fd9n9w-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-6cyybj-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-jzg4li-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params type contained 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_contained QxSelectionList_size_medium QxSelectionList_color_brand css-1fnm78-QxSelectionList-root"
    data-testid="testStyleParams-type-contained"
  >
    <label
      class="QxSelection QxSelection_type_contained QxSelection_color_brand QxSelection_size_medium css-1umvfb4-QxSelection-root"
      tabindex="0"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disableFocus QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              tabindex="-1"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_contained QxSelection_color_brand QxSelection_size_medium css-1umvfb4-QxSelection-root"
      tabindex="0"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disableFocus QxRadioButton_checked QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              tabindex="-1"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-ougcl3-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_contained QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-19jrqtz-QxSelection-root"
      tabindex="0"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disableFocus QxRadioButton_disabled QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="-1"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_contained QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-19jrqtz-QxSelection-root"
      tabindex="0"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disableFocus QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="-1"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-6cyybj-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params type text 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_brand css-18xz4x3-QxSelectionList-root"
    data-testid="testStyleParams-type-text"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1174crx-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-18eyicf-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-12b7igh-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-6s2lcv-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-eoljt8-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-ougcl3-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-4d8hk0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-cmzvj1-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-1qarle8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-1q52wqi-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-1y6ld3s-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-1vx60az-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1sptaub-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-6cyybj-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-xnoi1s-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-1bwrr8m-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1up8but-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;
